# win32

./: .gitattributes  .gitignore
Desktop Technologies/Audio and Video/Core Audio APIs/: CMakeLists.txt
Desktop Technologies/Audio and Video/Core Audio APIs/Audio Endpoint Devices/: CMakeLists.txt
Desktop Technologies/Audio and Video/Core Audio APIs/Audio Endpoint Devices/Device Events/: CMakeLists.txt  main.cc
Desktop Technologies/Audio and Video/Core Audio APIs/Volume Controls/: CMakeLists.txt
Desktop Technologies/Audio and Video/Core Audio APIs/Volume Controls/Endpoint Volume Controls/: CMakeLists.txt  main.cc
Desktop Technologies/Audio and Video/Core Audio APIs/Volume Controls/Peak Meters/: CMakeLists.txt  main.cc
Desktop Technologies/Audio and Video/Core Audio APIs/Volume Controls/Session Volume Controls/: CMakeLists.txt  main.cc
Desktop Technologies/Audio and Video/Core Audio APIs/Volume Controls/document/: sndvol.plantuml
Desktop Technologies/Audio and Video/Core Audio APIs/common/: com_init.h
Desktop Technologies/System Services/system information/: CMakeLists.txt
Desktop Technologies/System Services/system information/SMBIOS information/: CMakeLists.txt  firmware_table_enumerator.cpp  firmware_table_enumerator.h  main.cpp  smbios.cpp  smbios.h
Desktop Technologies/System Services/system information/SMBIOS information/impl/: smbios_impl.cpp  smbios_impl.h
Desktop Technologies/System Services/system information/hardware information/: CMakeLists.txt  hardware_information.cpp  hardware_information.h  main.cpp
